--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.proyecto_grupo7/org.example.proyecto_grupo7.HelloApplication
+                            <mainClass>org.example.proyecto_grupo7/org.example.proyecto_grupo7.MiApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
